--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,10 +9,7 @@
 
 name: Build and Deploy to GKE
 
-on:
-  push:
-    branches:
-      - main
+on: [push]
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
