--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,7 +1,6 @@
 name: Deploy to Kubernetes
 
 on: [push]
-
 jobs:
   build:
     runs-on: self-hosted
@@ -19,7 +18,9 @@ jobs:
 
       - name: Authenticate Docker with GCR
         run: |
-          echo "${{ secrets.GCP_SA_KEY }}" | docker login -u _json_key --password-stdin https://gcr.io
+          echo ${{ secrets.GCP_SA_KEY }} | base64 --decode > ${HOME}/gcloud-key.json
+          gcloud auth activate-service-account --key-file=${HOME}/gcloud-key.json
+          gcloud auth configure-docker
 
       - name: Build Docker image
         run: |
