--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,8 +11,8 @@ jobs:
 
       - name: Log GCP Project ID and Service Account Key
         run: |
-          echo "GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}"
-          echo "GCP_SA_KEY starts with: $(echo ${{ secrets.GCP_SA_KEY }} | cut -c1-10)..."
+          echo "GCP_PROJECT_ID: ${{ secrets.GKE_PROJECT }}"
+          echo "GCP_SA_KEY starts with: $(echo ${{ secrets.GKE_SA_KEY }} | cut -c1-10)..."
           # Ajoute plus de logs pour afficher les premières lignes du secret
 
       - name: Set up Google Cloud SDK
