--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,31 +17,31 @@ jobs:
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v0.2.0
         with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          project_id: ${{ secrets.GKE_PROJECT }}
+          service_account_key: ${{ secrets.GKE_SA_KEY }}
           export_default_credentials: true
 
       - name: Authenticate Docker with GCR
         run: |
-          echo ${{ secrets.GCP_SA_KEY }} | base64 --decode > ${HOME}/gcloud-key.json
+          echo ${{ secrets.GKE_SA_KEY }} | base64 --decode > ${HOME}/gcloud-key.json
           cat ${HOME}/gcloud-key.json # Vérifie le contenu décodé
           gcloud auth activate-service-account --key-file=${HOME}/gcloud-key.json
           gcloud auth configure-docker
 
       - name: Build Docker image
         run: |
-          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/sveltekit-app:${{ github.sha }} .
+          docker build -t gcr.io/${{ secrets.GKE_PROJECT }}/sveltekit-app:${{ github.sha }} .
           docker images # Log la liste des images disponibles
 
       - name: Push Docker image to GCR
         run: |
-          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/sveltekit-app:${{ github.sha }}
+          docker push gcr.io/${{ secrets.GKE_PROJECT }}/sveltekit-app:${{ github.sha }}
           docker tag # Log la confirmation de l'image taguée
 
       - name: Set up kubectl
         run: |
-          gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} --zone ${{ secrets.GKE_CLUSTER_ZONE }} --project ${{ secrets.GCP_PROJECT_ID }}
+          gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} --zone ${{ secrets.GKE_CLUSTER_ZONE }} --project ${{ secrets.GKE_PROJECT }}
 
       - name: Deploy to Kubernetes
         run: |
-          kubectl set image deployment/sveltekit-deployment sveltekit-container=gcr.io/${{ secrets.GCP_PROJECT_ID }}/sveltekit-app:${{ github.sha }}
+          kubectl set image deployment/sveltekit-deployment sveltekit-container=gcr.io/${{ secrets.GKE_PROJECT }}/sveltekit-app:${{ github.sha }}
