--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,48 +1,65 @@
-name: Deploy to Kubernetes
+name: Deploy to GKE
 
-on: [push]
+on:
+  push:
+    branches: [ main ]  # Ajustez selon votre branche principale
+
+env:
+  PROJECT_ID: ${{ secrets.GKE_PROJECT }}
+  GKE_CLUSTER: area-cluster
+  GKE_ZONE: europe-west1-b
+  DEPLOYMENT_NAME: sveltekit-deployment
+  IMAGE: sveltekit-app
+
 jobs:
-  build:
-    runs-on: self-hosted
+  setup-build-publish-deploy:
+    name: Setup, Build, Publish, and Deploy
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - name: Log GKE Project ID and Service Account Key
-        run: |
-          echo "${{ secrets.GKE_PROJECT }}" > secret.txt
-          cat secret.txt
-          echo "GKE_SA_KEY starts with: $(echo "${{ secrets.GKE_SA_KEY }}" | cut -c1-10)..."
-
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v0.2.0
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v1'
         with:
-          project_id: ${{ secrets.GKE_PROJECT }}
-          service_account_key: ${{ secrets.GKE_SA_KEY }}
-          export_default_credentials: true
+          credentials_json: '${{ secrets.GKE_SA_KEY }}'
 
-      - name: Authenticate Docker with GCR
-        run: |
-          echo ${{ secrets.GKE_SA_KEY }} | base64 --decode > ${HOME}/gcloud-key.json
-          cat ${HOME}/gcloud-key.json # Vérifie le contenu décodé
-          gcloud auth activate-service-account --key-file=${HOME}/gcloud-key.json
-          gcloud auth configure-docker
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v1'
 
-      - name: Build Docker image
-        run: |
-          docker build -t gcr.io/area-cluster/sveltekit-app:${{ github.sha }} ./frontend
-          docker images
+      - name: 'Use gcloud CLI'
+        run: 'gcloud info'
 
-      - name: Push Docker image to GCR
-        run: |
-          docker push gcr.io/area-cluster/sveltekit-app:${{ github.sha }} 
-          docker tag # Log la confirmation de l'image taguée
+      # Configure Docker to use the gcloud command-line tool as a credential helper
+      - run: |-
+          gcloud --quiet auth configure-docker
 
-      - name: Set up kubectl
-        run: |
-          gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} --zone ${{ secrets.GKE_CLUSTER_ZONE }} --project ${{ secrets.GKE_PROJECT }}
+      # Build the Docker image
+      - name: Build
+        run: |-
+          docker build \
+            --tag "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA" \
+            --build-arg GITHUB_SHA="$GITHUB_SHA" \
+            --build-arg GITHUB_REF="$GITHUB_REF" \
+            ./frontend
 
-      - name: Deploy to Kubernetes
-        run: |
-          kubectl set image deployment/sveltekit-deployment sveltekit-container=gcr.io/${{ secrets.GKE_PROJECT }}/sveltekit-app:${{ github.sha }}
+      # Push the Docker image to Google Container Registry
+      - name: Publish
+        run: |-
+          docker push "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
+
+      # Set up kustomize
+      - name: Set up Kustomize
+        run: |-
+          curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
+          chmod u+x ./kustomize
+
+      # Deploy the Docker image to the GKE cluster
+      - name: Deploy
+        run: |-
+          gcloud container clusters get-credentials $GKE_CLUSTER --zone $GKE_ZONE --project $PROJECT_ID
+          ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA
+          ./kustomize build . | kubectl apply -f -
+          kubectl rollout status deployment/$DEPLOYMENT_NAME
+          kubectl get services -o wide
