fix(CI): using Kustomize now

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,8 +1,6 @@
 name: Deploy to GKE
 
-on:
-  push:
-    branches: [ main ]  # Ajustez selon votre branche principale
+on: [push]
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
