--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -54,17 +54,14 @@ jobs:
         run: |-
           docker push "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
 
-      # Set up kustomize
-      - name: Set up Kustomize
-        run: |-
-          curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
-          chmod u+x ./kustomize
+      - name: Set GKE auth plugin
+        run: |
+          export USE_GKE_GCLOUD_AUTH_PLUGIN=True
 
-      # Deploy the Docker image to the GKE cluster
+      # Deploy the Docker image to the GKE cluster without Kustomize
       - name: Deploy
         run: |-
           gcloud container clusters get-credentials $GKE_CLUSTER --zone $GKE_ZONE --project $PROJECT_ID
-          ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA
-          ./kustomize build . | kubectl apply -f -
+          kubectl set image deployment/$DEPLOYMENT_NAME sveltekit-container=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA
           kubectl rollout status deployment/$DEPLOYMENT_NAME
           kubectl get services -o wide
