--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,13 +26,15 @@ jobs:
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v1'
 
+      - name: 'Install gke-gcloud-auth-plugin manually'
+        run: |
+          curl -o gke-gcloud-auth-plugin https://storage.googleapis.com/gke-gcloud-auth-plugin/linux_amd64/gke-gcloud-auth-plugin
+          chmod +x gke-gcloud-auth-plugin
+          sudo mv gke-gcloud-auth-plugin /usr/local/bin/
+          export USE_GKE_GCLOUD_AUTH_PLUGIN=True
+
       - name: 'Use gcloud CLI'
         run: 'gcloud info'
-
-      - name: 'Install gke-gcloud-auth-plugin'
-        run: |
-          sudo apt-get install google-cloud-sdk-gke-gcloud-auth-plugin
-          export USE_GKE_GCLOUD_AUTH_PLUGIN=True
 
       - name: 'Debug: Check permissions'
         run: |
