--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,6 +33,10 @@ jobs:
           sudo mv gke-gcloud-auth-plugin /usr/local/bin/
           export USE_GKE_GCLOUD_AUTH_PLUGIN=True
 
+      - name: 'Install kubectl'
+        run: |
+          sudo apt-get update && sudo apt-get install -y kubectl
+
       - name: 'Use gcloud CLI'
         run: 'gcloud info'
 
