--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,9 +33,17 @@ jobs:
           sudo mv gke-gcloud-auth-plugin /usr/local/bin/
           export USE_GKE_GCLOUD_AUTH_PLUGIN=True
 
+      - name: 'Add Kubernetes apt key and repo'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y apt-transport-https ca-certificates curl
+          sudo curl -fsSL https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+          echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee -a /etc/apt/sources.list.d/kubernetes.list
+          sudo apt-get update
+
       - name: 'Install kubectl'
         run: |
-          sudo apt-get update && sudo apt-get install -y kubectl
+          sudo apt-get install -y kubectl
 
       - name: 'Use gcloud CLI'
         run: 'gcloud info'
