fix(CI): using Kustomize now

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,17 +33,12 @@ jobs:
           sudo mv gke-gcloud-auth-plugin /usr/local/bin/
           export USE_GKE_GCLOUD_AUTH_PLUGIN=True
 
-      - name: 'Add Kubernetes apt key and repo'
+      - name: 'Install kubectl via curl'
         run: |
-          sudo apt-get update
-          sudo apt-get install -y apt-transport-https ca-certificates curl
-          sudo curl -fsSL https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
-          echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee -a /etc/apt/sources.list.d/kubernetes.list
-          sudo apt-get update
-
-      - name: 'Install kubectl'
-        run: |
-          sudo apt-get install -y kubectl
+          curl -LO "https://dl.k8s.io/release/$(curl -Ls https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+          chmod +x kubectl
+          sudo mv kubectl /usr/local/bin/
+          kubectl version --client
 
       - name: 'Use gcloud CLI'
         run: 'gcloud info'
