--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,19 +26,19 @@ jobs:
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v1'
 
-      - name: 'Install gke-gcloud-auth-plugin manually'
-        run: |
-          curl -o gke-gcloud-auth-plugin https://storage.googleapis.com/gke-gcloud-auth-plugin/linux_amd64/gke-gcloud-auth-plugin
-          chmod +x gke-gcloud-auth-plugin
-          sudo mv gke-gcloud-auth-plugin /usr/local/bin/
-          export USE_GKE_GCLOUD_AUTH_PLUGIN=True
-
       - name: 'Install kubectl via curl'
         run: |
           curl -LO "https://dl.k8s.io/release/$(curl -Ls https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
           chmod +x kubectl
           sudo mv kubectl /usr/local/bin/
           kubectl version --client
+
+      - name: 'Install gke-gcloud-auth-plugin manually'
+        run: |
+          curl -LO "https://storage.googleapis.com/gke-gcloud-auth-plugin/linux_amd64/gke-gcloud-auth-plugin"
+          chmod +x gke-gcloud-auth-plugin
+          sudo mv gke-gcloud-auth-plugin /usr/local/bin/
+          export USE_GKE_GCLOUD_AUTH_PLUGIN=True
 
       - name: 'Use gcloud CLI'
         run: 'gcloud info'
