--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,6 +25,11 @@ jobs:
 
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v1'
+        with:
+          install_components: 'gke-gcloud-auth-plugin'
+
+      - name: Verify gke-gcloud-auth-plugin
+        run: gcloud components list | grep gke-gcloud-auth-plugin
 
       - name: 'Use gcloud CLI'
         run: 'gcloud info'
