--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,5 +38,8 @@
     "vite": "^5.0.3",
     "vite-plugin-tailwind-purgecss": "0.3.3"
   },
+  "dependencies": {
+    "@area/types": "workspace:*"
+  },
   "type": "module"
 }
