--- a/worker/package.json
+++ b/worker/package.json
@@ -13,10 +13,13 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.5.5",
+    "dotenv": "^16.4.5",
+    "mongodb": "^6.9.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@area/types": "workspace:*"
+    "@area/types": "workspace:*",
+    "nodemailer": "^6.9.15"
   }
 }
