--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "",
+  "name": "frontend",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "preview": "vite preview",
+    "preview": "vite preview --host 0.0.0.0",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check . && eslint .",
@@ -37,9 +37,6 @@
     "typescript-eslint": "^8.0.0",
     "vite": "^5.0.3",
     "vite-plugin-tailwind-purgecss": "0.3.3"
-  },
-  "dependencies": {
-    "@area/types": "workspace:*"
   },
   "type": "module"
 }
