--- a/frontend/prodConfig/ingress.yml
+++ b/frontend/prodConfig/ingress.yml
@@ -3,20 +3,22 @@ kind: Ingress
 metadata:
   name: web-ingress
   annotations:
-    # This tells Google Cloud to create an External Load Balancer to realize this Ingress
-    kubernetes.io/spec.ingressClassName: gce
-    # This enables HTTP connections from Internet clients
-    kubernetes.io/ingress.allow-http: "true"
-    # This tells Google Cloud to associate the External Load Balancer with the static IP which we created earlier
+    kubernetes.io/ingress.class: gce
     kubernetes.io/ingress.global-static-ip-name: web-ip
-
-    cert-manager.io/issuer: letsencrypt-staging
+    cert-manager.io/cluster-issuer: letsencrypt-production
 spec:
   tls:
     - hosts:
         - area.oden-app.com
-  defaultBackend:
-    service:
-      name: web
-      port:
-        number: 8080
+      secretName: sveltekit-tls
+  rules:
+    - host: area.oden-app.com
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: sveltekit-service
+                port:
+                  number: 80
