--- a/worker/package.json
+++ b/worker/package.json
@@ -10,12 +10,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "devDependencies": {
     "@types/node": "^22.5.5",
+    "dotenv": "^16.4.5",
+    "mongodb": "^6.9.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "nodemailer": "^6.9.15"
     "acorn": "^8.12.1",
     "acorn-walk": "^8.3.4",
     "arg": "^4.1.3",
@@ -25,6 +29,5 @@
     "undici-types": "^6.19.8",
     "v8-compile-cache-lib": "^3.0.1",
     "yn": "^3.1.1"
-  },
-  "description": ""
+  }
 }
