--- a/worker/package.json
+++ b/worker/package.json
@@ -1,7 +1,7 @@
 {
   "name": "worker",
   "version": "1.0.0",
-  "main": "src/index.ts",
+  "main": "index.js",
   "scripts": {
     "build": "tsc",
     "start": "ts-node src/index.ts",
@@ -11,24 +11,17 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "devDependencies": {
-    "@types/node": "^22.5.5",
-    "@types/nodemailer": "^6.4.16",
-    "dotenv": "^16.4.5",
-    "mongodb": "^6.9.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
-  },
   "dependencies": {
-    "acorn": "^8.12.1",
-    "acorn-walk": "^8.3.4",
-    "arg": "^4.1.3",
-    "create-require": "^1.1.1",
-    "diff": "^4.0.2",
-    "make-error": "^1.3.6",
-    "nodemailer": "^6.9.15",
-    "undici-types": "^6.19.8",
-    "v8-compile-cache-lib": "^3.0.1",
-    "yn": "^3.1.1"
+    "amqplib": "^0.10.4",
+    "dotenv": "^16.4.5"
+  },
+  "devDependencies": {
+    "@types/amqplib": "^0.10.5",
+    "@types/node": "^22.7.2",
+    "mongodb": "^6.9.0",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
+    "tsc-watch": "^6.2.0",
+    "typescript": "^5.6.2"
   }
 }
