--- a/orchestrator/package.json
+++ b/orchestrator/package.json
@@ -2,21 +2,30 @@
   "name": "queue",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "orchestrator.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "send": "npx ts-node orchestrator.ts",
-    "worker": "npx ts-node worker.ts"
+    "build": "tsc",
+    "start": "ts-node -r tsconfig-paths/register orchestrator.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/amqplib": "^0.10.5",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^22.6.1",
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "amqplib": "^0.10.4"
+    "amqplib": "^0.10.4",
+    "mongodb": "^6.9.0",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0"
+  },
+  "ts-node": {
+    "require": [
+      "tsconfig-paths/register"
+    ]
   }
 }
