--- a/worker/package.json
+++ b/worker/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsc",
     "start": "ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "exemple_worker": "ts-node -r tsconfig-paths/register src/exemple_worker.ts"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +30,12 @@
     "nodemailer": "^6.9.15",
     "undici-types": "^6.19.8",
     "v8-compile-cache-lib": "^3.0.1",
-    "yn": "^3.1.1"
+    "yn": "^3.1.1",
+    "tsconfig-paths": "^4.2.0"
+  },
+  "ts-node": {
+    "require": [
+      "tsconfig-paths/register"
+    ]
   }
 }
