--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -14,6 +14,7 @@
     "lib:lint": "eslint \"src/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@nestjs/swagger": "^7.4.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1"
   },
