--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -6,7 +6,7 @@
     "build": "tsc",
     "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "exemple_worker": "ts-node -r tsconfig-paths/register src/exemple_worker.ts"
+    "example_worker": "ts-node src/example_worker.ts"
   },
   "keywords": [],
   "author": "",
