feat(AREA-42): add dto file structure, rabbitmq connection and basic worker and orchestrator (1/2) (#18)

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
 
     "front:build": "npm run build -w @area/frontend",
     "front:start": "node apps/frontend/build",
-    "front:dev": "npm run dev -w @area/frontend"
+    "front:dev": "npm run dev -w @area/frontend",
+
+    "task-manager:start": "npm run start -w @area/manager"
   },
   "devDependencies": {
     "rimraf": "3.0.2",
