--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -5,16 +5,13 @@
   "scripts": {
     "build": "tsc",
     "start": "ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "example_worker": "ts-node src/example_worker.ts"
   },
   "keywords": [],
   "author": "",
   "license": "UNLICENSED",
   "description": "",
-  "dependencies": {
-    "amqplib": "^0.10.4",
-    "dotenv": "^16.4.5"
-  },
   "devDependencies": {
     "@types/amqplib": "^0.10.5",
     "@types/node": "^22.7.2",
@@ -23,5 +20,25 @@
     "ts-node": "^10.9.2",
     "tsc-watch": "^6.2.0",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "amqplib": "^0.10.4",
+    "dotenv": "^16.4.5",
+    "acorn": "^8.12.1",
+    "acorn-walk": "^8.3.4",
+    "arg": "^4.1.3",
+    "create-require": "^1.1.1",
+    "diff": "^4.0.2",
+    "make-error": "^1.3.6",
+    "nodemailer": "^6.9.15",
+    "undici-types": "^6.19.8",
+    "v8-compile-cache-lib": "^3.0.1",
+    "yn": "^3.1.1",
+    "tsconfig-paths": "^4.2.0"
+  },
+  "ts-node": {
+    "require": [
+      "tsconfig-paths/register"
+    ]
   }
 }
