--- a/apps/frontend/prodConfig/ingress.yml
+++ b/apps/frontend/prodConfig/ingress.yml
@@ -6,7 +6,7 @@ metadata:
     # This tells Google Cloud to create an External Load Balancer to realize this Ingress
     kubernetes.io/spec.ingressClassName: gce
     # This enables HTTP connections from Internet clients
-    kubernetes.io/ingress.allow-http: "true"
+    kubernetes.io/ingress.allow-http: 'true'
     # This tells Google Cloud to associate the External Load Balancer with the static IP which we created earlier
     kubernetes.io/ingress.global-static-ip-name: web-ip
 
