--- a/apps/task_manager/.env.example
+++ b/apps/task_manager/.env.example
@@ -1,4 +1,10 @@
-MONGODB_URI=
+MONGO_HOST=
+MONGO_PORT=
+MONGO_USER=
+MONGO_PASSWORD=
+MONGO_AUTH_SOURCE=
+MONGO_DB_NAME=
+MONGO_TLS_CA_FILE=
 RMQ_USER=
 RMQ_PASS=
 RMQ_HOST=
