--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "front:start": "node apps/frontend/build",
     "front:dev": "npm run dev -w @area/frontend",
 
-    "task-manager:start": "npm run start -w @area/manager"
+    "task-manager:start": "npm run start -w @area/manager",
+
+    "worker:start": "npm run start -w @area/worker"
   },
   "devDependencies": {
     "rimraf": "3.0.2",
