--- a/apps/task_manager/.env.example
+++ b/apps/task_manager/.env.example
@@ -1,10 +1,10 @@
-MONGO_HOST=
-MONGO_PORT=
-MONGO_USER=
-MONGO_PASSWORD=
-MONGO_AUTH_SOURCE=
-MONGO_DB_NAME=
-MONGO_TLS_CA_FILE=
+MONGODB_HOST=
+MONGODB_PORT=
+MONGODB_USER=
+MONGODB_PASSWORD=
+MONGODB_AUTH_SOURCE=
+MONGODB_DB_NAME=
+MONGODB_TLS_CA_FILE=
 RMQ_USER=
 RMQ_PASS=
 RMQ_HOST=
