feat(AREA-43): basic auth / register page (#21)

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,1 +1,7 @@
-DB_URI=
+MONGODB_HOST=
+MONGODB_PORT=
+MONGODB_USER=
+MONGODB_PASSWORD=
+MONGODB_AUTH_SOURCE=
+MONGODB_DB_NAME=
+MONGODB_TLS_CA_FILE=
