--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "@nestjs/swagger": "^7.4.2",
+    "amqplib": "^0.10.4",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1"
+    "class-validator": "^0.14.1",
+    "mongodb": "^6.9.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.21.0",
