--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,47 +31,46 @@ jobs:
       - name: 'Use gcloud CLI'
         run: 'gcloud info'
 
-      # Configure Docker to use the gcloud command-line tool as a credential helper
-      - run: |-
-          gcloud --quiet auth configure-docker
+      - name: Configure Docker
+        run: gcloud --quiet auth configure-docker
 
-      # Build and push the Frontend Docker image
-      - name: Build Frontend
-        run: |-
-          docker build \
-            -t "gcr.io/$PROJECT_ID/$FRONTEND_IMAGE:$GITHUB_SHA" \
-            -f apps/frontend/Dockerfile \
-            .
+      - name: Build and push Frontend Docker image
+        run: |
+          docker build -t "gcr.io/$PROJECT_ID/$FRONTEND_IMAGE:$GITHUB_SHA" -f apps/frontend/Dockerfile .
           docker push "gcr.io/$PROJECT_ID/$FRONTEND_IMAGE:$GITHUB_SHA"
-          docker tag "gcr.io/$PROJECT_ID/$FRONTEND_IMAGE:$GITHUB_SHA" "gcr.io/$PROJECT_ID/$FRONTEND_IMAGE:latest"
-          docker push "gcr.io/$PROJECT_ID/$FRONTEND_IMAGE:latest"
 
-      - name: Build Backend
-        run: |-
-          docker build \
-            -t "gcr.io/$PROJECT_ID/$BACKEND_IMAGE:$GITHUB_SHA" \
-            -f apps/api/Dockerfile \
-            .
+      - name: Build and push Backend Docker image
+        run: |
+          docker build -t "gcr.io/$PROJECT_ID/$BACKEND_IMAGE:$GITHUB_SHA" -f apps/api/Dockerfile .
           docker push "gcr.io/$PROJECT_ID/$BACKEND_IMAGE:$GITHUB_SHA"
-          docker tag "gcr.io/$PROJECT_ID/$BACKEND_IMAGE:$GITHUB_SHA" "gcr.io/$PROJECT_ID/$BACKEND_IMAGE:latest"
-          docker push "gcr.io/$PROJECT_ID/$BACKEND_IMAGE:latest"
 
-      # Deploy the Docker images to the GKE cluster
-      - name: Deploy
-        run: |-
-          gcloud container clusters get-credentials $GKE_CLUSTER --zone $GKE_ZONE --project $PROJECT_ID
-          kubectl set image deployment/$FRONTEND_DEPLOYMENT_NAME sveltekit-container=gcr.io/$PROJECT_ID/$FRONTEND_IMAGE:$GITHUB_SHA
-          kubectl set image deployment/$BACKEND_DEPLOYMENT_NAME nestjs-container=gcr.io/$PROJECT_ID/$BACKEND_IMAGE:$GITHUB_SHA
-          kubectl rollout restart deployment/$FRONTEND_DEPLOYMENT_NAME
-          kubectl rollout status deployment/$FRONTEND_DEPLOYMENT_NAME
-          kubectl rollout restart deployment/$BACKEND_DEPLOYMENT_NAME
-          kubectl rollout status deployment/$BACKEND_DEPLOYMENT_NAME
-          kubectl get services -o wide
+      - name: Get GKE Credentials
+        run: gcloud container clusters get-credentials $GKE_CLUSTER --zone $GKE_ZONE --project $PROJECT_ID
 
-      # Apply the Kubernetes configurations
+      - name: Update deployment files
+        run: |
+          sed -i 's|${GITHUB_SHA}|'$GITHUB_SHA'|g' apps/frontend/prodConfig/sveltekit-deploy.yml
+          sed -i 's|${GITHUB_SHA}|'$GITHUB_SHA'|g' apps/api/prodConfig/nestjs-deploy.yml
+
       - name: Apply Kubernetes configurations
-        run: |-
+        run: |
           kubectl apply -f apps/frontend/prodConfig/sveltekit-deploy.yml
           kubectl apply -f apps/frontend/prodConfig/sveltekit-service.yml
           kubectl apply -f apps/api/prodConfig/nestjs-deploy.yml
           kubectl apply -f apps/api/prodConfig/nestjs-service.yml
+
+      - name: Update deployments
+        run: |
+          kubectl set image deployment/$FRONTEND_DEPLOYMENT_NAME sveltekit-container=gcr.io/$PROJECT_ID/$FRONTEND_IMAGE:$GITHUB_SHA
+          kubectl set image deployment/$BACKEND_DEPLOYMENT_NAME nestjs-container=gcr.io/$PROJECT_ID/$BACKEND_IMAGE:$GITHUB_SHA
+          kubectl rollout restart deployment/$FRONTEND_DEPLOYMENT_NAME
+          kubectl rollout restart deployment/$BACKEND_DEPLOYMENT_NAME
+          kubectl rollout status deployment/$FRONTEND_DEPLOYMENT_NAME
+          kubectl rollout status deployment/$BACKEND_DEPLOYMENT_NAME
+
+      - name: Verify deployment
+        run: |
+          echo "Verifying backend deployment..."
+          kubectl get pods -l app=nestjs -o jsonpath='{.items[0].spec.containers[0].image}'
+          echo "\nVerifying backend response..."
+          kubectl run -i --rm --restart=Never curl-test --image=curlimages/curl -- curl -s http://nestjs-service/areas/ping
