--- a/apps/task_manager/.env.example
+++ b/apps/task_manager/.env.example
@@ -1,4 +1,10 @@
-MONGODB_URI=
+MONGODB_HOST=
+MONGODB_PORT=
+MONGODB_USER=
+MONGODB_PASSWORD=
+MONGODB_AUTH_SOURCE=
+MONGODB_DB_NAME=
+MONGODB_TLS_CA_FILE=
 RMQ_USER=
 RMQ_PASS=
 RMQ_HOST=
