--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "front:dev": "npm run dev -w @area/frontend",
     "front:format": "npm run format -w @area/frontend",
 
-    "task-manager:start": "npm run start -w @area/manager"
+    "task-manager:start": "npm run start -w @area/manager",
+
+    "worker:start": "npm run start -w @area/worker"
   },
   "devDependencies": {
     "rimraf": "3.0.2",
