--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -14,9 +14,11 @@
     "lib:lint": "eslint \"src/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@nestjs/mongoose": "^10.0.10",
     "@nestjs/swagger": "^7.4.2",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1"
+    "class-validator": "^0.14.1",
+    "mongoose": "^8.7.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.21.0",
