--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 
     "task-manager:start": "npm run start -w @area/manager",
 
-    "worker:start": "npm run start -w @area/worker"
+    "worker:start": "npm run start -w @area/worker",
+    "worker:example_worker": "npm run example_worker -w @area/worker"
   },
   "devDependencies": {
     "rimraf": "3.0.2",
