--- a/.github/workflows/deploy_to_gke.yml
+++ b/.github/workflows/deploy_to_gke.yml
@@ -1,8 +1,5 @@
 name: Deploy to GKE
-on:
-  push:
-    branches:
-      - main
+on: [push]
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
@@ -47,6 +44,12 @@ jobs:
           docker build -t "gcr.io/$PROJECT_ID/$BACKEND_IMAGE:$GITHUB_SHA" -f apps/api/Dockerfile .
           docker push "gcr.io/$PROJECT_ID/$BACKEND_IMAGE:$GITHUB_SHA"
 
+      - name: Build and push RabbitMQ Docker image
+        run: |
+          docker build -t "gcr.io/$PROJECT_ID/rabbitmq:$GITHUB_SHA" -f apps/rabbitmq/Dockerfile .
+          docker push "gcr.io/$PROJECT_ID/rabbitmq:$GITHUB_SHA"
+
+
       - name: Get GKE Credentials
         run: gcloud container clusters get-credentials $GKE_CLUSTER --zone $GKE_ZONE --project $PROJECT_ID
 
@@ -61,12 +64,17 @@ jobs:
           kubectl apply -f apps/frontend/prodConfig/sveltekit-service.yml
           kubectl apply -f apps/api/prodConfig/nestjs-deploy.yml
           kubectl apply -f apps/api/prodConfig/nestjs-service.yml
+          kubectl apply -f apps/rabbitmq/prodConfig/rabbitmq-deploy.yml
+          kubectl apply -f apps/rabbitmq/prodConfig/rabbitmq-service.yml
 
       - name: Update deployments
         run: |
           kubectl set image deployment/$FRONTEND_DEPLOYMENT_NAME sveltekit-container=gcr.io/$PROJECT_ID/$FRONTEND_IMAGE:$GITHUB_SHA
           kubectl set image deployment/$BACKEND_DEPLOYMENT_NAME nestjs-container=gcr.io/$PROJECT_ID/$BACKEND_IMAGE:$GITHUB_SHA
+          kubeclt set image deployment/rabbitmq-deployment rabbitmq-container=gcr.io/$PROJECT_ID/rabbitmq:$GITHUB_SHA
           kubectl rollout restart deployment/$FRONTEND_DEPLOYMENT_NAME
           kubectl rollout restart deployment/$BACKEND_DEPLOYMENT_NAME
+          kubectl rollout restart deployment/rabbitmq-deployment
           kubectl rollout status deployment/$FRONTEND_DEPLOYMENT_NAME
           kubectl rollout status deployment/$BACKEND_DEPLOYMENT_NAME
+          kubectl rollout status deployment/rabbitmq-deployment
