--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/swagger": "^7.4.2",
+    "amqplib": "^0.10.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "mongoose": "^8.7.0"
