--- a/.github/workflows/deploy_to_gke.yml
+++ b/.github/workflows/deploy_to_gke.yml
@@ -49,15 +49,17 @@ jobs:
           docker build -t "gcr.io/$PROJECT_ID/rabbitmq:$GITHUB_SHA" -f apps/queue/Dockerfile .
           docker push "gcr.io/$PROJECT_ID/rabbitmq:$GITHUB_SHA"
 
-
       - name: Get GKE Credentials
         run: gcloud container clusters get-credentials $GKE_CLUSTER --zone $GKE_ZONE --project $PROJECT_ID
 
       - name: Update deployment files
         run: |
-          sed -i 's|${GITHUB_SHA}|'$GITHUB_SHA'|g' apps/frontend/prodConfig/sveltekit-deploy.yml
-          sed -i 's|${GITHUB_SHA}|'$GITHUB_SHA'|g' apps/api/prodConfig/nestjs-deploy.yml
-          sed -i 's|${GITHUB_SHA}|'$GITHUB_SHA'|g' apps/queue/prodConfig/rabbitmq-deploy.yml
+          sed -i 's|\$PROJECT_ID|'$PROJECT_ID'|g' apps/frontend/prodConfig/sveltekit-deploy.yml
+          sed -i 's|\$PROJECT_ID|'$PROJECT_ID'|g' apps/api/prodConfig/nestjs-deploy.yml
+          sed -i 's|\$PROJECT_ID|'$PROJECT_ID'|g' apps/queue/prodConfig/rabbitmq-deploy.yml
+          sed -i 's|\$GITHUB_SHA|'$GITHUB_SHA'|g' apps/frontend/prodConfig/sveltekit-deploy.yml
+          sed -i 's|\$GITHUB_SHA|'$GITHUB_SHA'|g' apps/api/prodConfig/nestjs-deploy.yml
+          sed -i 's|\$GITHUB_SHA|'$GITHUB_SHA'|g' apps/queue/prodConfig/rabbitmq-deploy.yml
 
       - name: Apply Kubernetes configurations
         run: |
