--- a/.github/workflows/push_to_mirror.yml
+++ b/.github/workflows/push_to_mirror.yml
@@ -1,6 +1,12 @@
 name: Area
 
-on: [push, pull_request]
+on:
+  pull_request:
+    branches:
+      - main
+  push:
+    branches:
+      - main
 
 env:
   MIRROR_URL: "git@github.com:EpitechPromo2027/B-DEV-500-LIL-5-1-area-leo.dumont.git"
