fix(CI): new manager docker compose and conf for k8s

--- a/apps/api/prodConfig/nestjs-deploy.yml
+++ b/apps/api/prodConfig/nestjs-deploy.yml
@@ -46,5 +46,5 @@ spec:
           secret:
             secretName: mongodb-ca-secret
             items:
-              - key: ca.pem
+              - key: mongodb-ca.pem
                 path: mongodb-ca.pem
