fix(CI): new manager docker compose and conf for k8s

--- a/apps/task_manager/prodConfig/manager-secret.yml
+++ b/apps/task_manager/prodConfig/manager-secret.yml
@@ -5,7 +5,7 @@ metadata:
 type: Opaque
 data:
   RABBITMQ_DEFAULT_USER: dXNlcg==              # base64-encoded 'user'
-  RABBITMQ_DEAFAULT_PASS: cGFzcw==             # base64-encoded 'pass'
+  RABBITMQ_DEFAULT_PASS: cGFzcw==             # base64-encoded 'pass'
   RMQ_HOST: bG9jYWxob3N0                     # base64-encoded 'localhost'
   RMQ_QUEUE: cXVldWU=                         # base64-encoded 'queue'
   MONGODB_HOST: MTM4LjY4LjE4My4xNTk=          # base64-encoded '138.68.183.159'
