feat(AREA-47): change env exemple

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,9 +1,13 @@
 JWT_SECRET=
+SECRET_SESSION=
 
 MONGODB_HOST=
 MONGODB_PORT=
-MONGODB_USER=
+MONGODB_USERa=
 MONGODB_PASSWORD=
 MONGODB_AUTH_SOURCE=
 MONGODB_DB_NAME=
 MONGODB_TLS_CA_FILE=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL=
