--- a/apps/worker/Dockerfile
+++ b/apps/worker/Dockerfile
@@ -2,15 +2,16 @@ FROM node:lts-alpine
 WORKDIR /app
 
 COPY apps/shared apps/shared
-COPY apps/task_manager apps/task_manager
-COPY mongodb-ca.pem apps/task_manager
+COPY apps/worker apps/worker
+COPY mongodb-ca.pem apps/worker
 COPY package.json .
 COPY tsconfig*.json .
 
+
 RUN npm i
 RUN npm install -g typescript
-RUN tsc -b apps/shared 
+RUN tsc -b apps/shared
 
 RUN npm run libs:build
 
-CMD npm run task-manager:start
+CMD npm run worker:start
